--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title></title>
+		<meta charset="UTF-8">
+		<title>我本以為早已習慣世界孤寂</title>
 	</head>
 	<body>
+		<h1>我本以為早已習慣世界孤寂</h1>
+		<img src="img/page1.jpg">
 		
+        -->
 	</body>
 </html>
