--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>我本以為早已習慣世界孤寂</title>
+		<title>首頁</title>
 	</head>
 	<body>
-		<h1>我本以為早已習慣世界孤寂</h1>
-		<img src="img/page1.jpg">
-		
-        -->
+		<a href = "love.html">
 	</body>
 </html>
