--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>首頁</title>
+		<title>Home</title>
 	</head>
 	<body>
-		<a href = "love.html"></a>
+		<a href = "love.html">開頭</a>
 	</body>
 </html>
