--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<a href = "love.html">開頭</a>
+		<a href = "pagination/love.html">開頭</a>
 	</body>
 </html>
