--- a/Pagination/love.html
+++ b/Pagination/love.html
@@ -14,6 +14,8 @@
 			}
 			img
 			{
+				width:1900px;
+				height: 1800px;
 				border-width:5px;
 				border-style: solid;
 				border-color: gray;
