--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -16,7 +16,7 @@
     <link rel="dns-prefetch" href="//v.mifile.cn" />
     <link rel="dns-prefetch" href="//a.huodong.mi.cn" />
     <link rel="shortcut icon" href="//s01.mifile.cn/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="//s01.mifile.cn/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="" type="image/x-icon" />
     <link rel="search" title="mi.com" href="//s1.mi.com/search.xml?v1.0" type="application/opensearchdescription+xml" />
     <meta http-equiv="Cache-Control" content="no-transform " />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
@@ -244,7 +244,7 @@
       	<br />
       		<input type = "button" 
 						value = "開启" 
-						onclick="window.location.href='http://kinglovenatalia.top/pagination/Home/home.html'"
+						onclick="window.location.href='http://kinglovenatalia.top/Pagination/Home/home.html'"
 						style="height:100px;width:130px;margin-left: 55px;font-size: 36px;"/>
       	
       </div>
