--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -6,15 +6,7 @@
     <meta charset="UTF-8" />
     <title>情人節特輯</title>
     <meta name="viewport" content="width=1226" />
-    <meta http-equiv="x-dns-prefetch-control" content="on">
-    <link rel="dns-prefetch" href="//s01.mifile.cn" />
-    <link rel="dns-prefetch" href="//c1.mifile.cn" />
-    <link rel="dns-prefetch" href="//i3.mifile.cn" />
-    <link rel="dns-prefetch" href="//i2.mifile.cn" />
-    <link rel="dns-prefetch" href="//i1.mifile.cn" />
-    <link rel="dns-prefetch" href="//i8.mifile.cn" />
-    <link rel="dns-prefetch" href="//v.mifile.cn" />
-    <link rel="dns-prefetch" href="//a.huodong.mi.cn" />
+    <meta http-equiv="x-dns-prefetch-control" content="on"/>
     <meta http-equiv="Cache-Control" content="no-transform " />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <link rel="stylesheet" href="static/css/base.min.css" />
