--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -9,6 +9,7 @@
     <meta http-equiv="x-dns-prefetch-control" content="on"/>
     <meta http-equiv="Cache-Control" content="no-transform " />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
+	  <link rel="icon" href="static/images/website.ico" />
     <link rel="stylesheet" href="static/css/base.min.css" />
     <link rel="stylesheet" type="text/css" href="static/css/index.min.css" />
     <script type="text/javascript">var _head_over_time = (new Date()).getTime();</script>
