--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -9,6 +9,15 @@
     <meta http-equiv="x-dns-prefetch-control" content="on"/>
     <meta http-equiv="Cache-Control" content="no-transform " />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
+	  <meta http-equiv="x-dns-prefetch-control" content="on">
+	<link rel="dns-prefetch" href="//s01.mifile.cn" />
+	<link rel="dns-prefetch" href="//c1.mifile.cn" />
+	<link rel="dns-prefetch" href="//i3.mifile.cn" />
+	<link rel="dns-prefetch" href="//i2.mifile.cn" />
+	<link rel="dns-prefetch" href="//i1.mifile.cn" />
+	<link rel="dns-prefetch" href="//i8.mifile.cn" />
+	<link rel="dns-prefetch" href="//v.mifile.cn" />
+	<link rel="dns-prefetch" href="//a.huodong.mi.cn" />
 	  <link rel="icon" href="static/images/website.ico" />
     <link rel="stylesheet" href="static/css/base.min.css" />
     <link rel="stylesheet" type="text/css" href="static/css/index.min.css" />
