--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -1,14 +1,10 @@
 ﻿<!doctype html>
-<html lang="zh-CN" xml:lang="zh-CN">
+<html >
   
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta charset="UTF-8" />
     <title>情人節特輯</title>
-    <meta name="viewport" content="width=1226" />
-    <meta http-equiv="x-dns-prefetch-control" content="on"/>
-    <meta http-equiv="Cache-Control" content="no-transform " />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
 	  <link rel="icon" href="static/images/website.ico" />
     <link rel="stylesheet" href="static/css/base.min.css" />
     <link rel="stylesheet" type="text/css" href="static/css/index.min.css" />
