--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -76,7 +76,7 @@
           <dv class="layer">
             <div class="context">
               <div class="video-con">
-                <img data-src="static/picture/aperture.gif" alt=""></div>
+              </div>
               <h2 class="webfont">"沒有人愛的賢賢"</h2>
               <p class="des">內心比颐和园内成片的枯木仍萧瑟三分，
                 <br />外面彷彿是紫禁城護城河終年不解的寒冰。</p></div>
@@ -95,7 +95,7 @@
           <div class="layer">
             <div class="context">
               <div class="video-con">
-                <img data-src="static/picture/aperture.gif" alt=""></div>
+                </div>
               <h2 class="webfont">終於!你,來了!</h2>
               <p class="des">你自山河林间过
                 <br />惊鸿一现百花开</p></div>
@@ -114,7 +114,7 @@
           <div class="layer">
             <div class="context">
               <div class="video-con">
-                <img data-src="static/picture/aperture.gif" alt=""></div>
+                </div>
               <h2 class="webfont">死亡式的開局</h2>
               <p class="des">初次認識，我便輕浮猖狂地稱你"老婆"
                 <br />本以為你該厌惡地反駁斥責</p>
@@ -129,7 +129,7 @@
           <div class="layer">
             <div class="context">
               <div class="video-con">
-                <img data-src="static/picture/aperture.gif" alt=""></div>
+                </div>
               <h2 class="webfont">跨年夜是我們第一次正式見面</h2>
               <p class="des">或者是...約會?那晚你真的很美
                 <br />(記得你當時還說只想和我做朋友!哼!)</p></div>
