--- a/Pagination/Home/home.html
+++ b/Pagination/Home/home.html
@@ -39,7 +39,7 @@
 		<form>
 			<input type = "button" 
 			value = "小賢賢的博客" 
-			onclick="window.location.href='www.kinglovenatalia.top/Pagination/blog/blog.html'"
+			onclick="window.location.href='https://www.kinglovenatalia.top/Pagination/blog/blog.html'"
 			style="height:40px;width:100px;font-size: 12px;"/>
 		</form>
 	</div>
