--- a/Pagination/Home/home.html
+++ b/Pagination/Home/home.html
@@ -37,7 +37,7 @@
 		<form>
 			<input type = "button" 
 			value = "小賢賢的博客" 
-			onclick="window.location.href='blog.kinglovenatalia.top'"
+			onclick="window.location.href='http://blog.kinglovenatalia.top'"
 			style="height:40px;width:100px;font-size: 12px;"/>
 		</form>
 	</div>
