--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -197,7 +197,7 @@
       </div>
       <div class="section section-music">
         <div class="content">
-          <img data-src="" alt="">
+          <img data-src="static/picture/hung.jpg" alt="">
           <div class="context">
             <div class="layer">
               <div class="text">
