--- a/Pagination/Home/home.html
+++ b/Pagination/Home/home.html
@@ -36,8 +36,8 @@
 	<div class="selfblog">
 		<form>
 			<input type = "button" 
-			value = "小賢賢的博客" 
-			onclick="window.location.href='http://blog.kinglovenatalia.top'"
+			value = "洪形暖宝宝" 
+			onclick="window.location.href='http://nk1030.xyz'"
 			style="height:40px;width:100px;font-size: 12px;"/>
 		</form>
 	</div>
