--- a/Pagination/special/special.html
+++ b/Pagination/special/special.html
@@ -215,7 +215,7 @@
       <div class="section section-footer">
         <div class="container">
           <h2 style="font-size: 32px;color:blue;">終於等到你，還好我沒放棄!</h2>
-          <p style="font-size: 46px;color:palevioletred;">曉兒，情人節及戀愛一個月快樂!</p></div>
+          <p style="font-size: 46px;color:palevioletred;">曉兒，情人節且戀愛一個月快樂!</p></div>
           
       </div>
       <div class="button">
